# fernand0

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  USE_THIS.md  build_readme.py  cache.py  config.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml
tests/: __init__.py  test_cache.py  test_cli.py  test_config.py  test_fetching.py  test_formatting.py  test_validation.py
